templates/apertium_template.yaml
---
# Source: apertium/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apertium-release-name
  labels:
    app: apertium
    chart: apertium-0.1.12
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: apertium
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: 2737
        protocol: TCP
      - port: 9102
        protocol: TCP
---
# Source: apertium/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apertium-release-name
  labels:
    app: apertium
    chart: apertium-0.1.12
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: apertium
    release: release-name
    routed_via: release-name
  ports:
  - name: http
    protocol: TCP
    port: 2737
---
# Source: apertium/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apertium-release-name
  labels:
    app: apertium
    chart: apertium-0.1.12
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: apertium
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: apertium
        release: release-name
        routed_via: release-name
      annotations:
        prometheus.io/port: "9102"        
    spec:
      containers:
        # The main application container
        - name: apertium-release-name
          image: "docker-registry.wikimedia.org/wikimedia/mediawiki-services-apertium:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2737
          livenessProbe:
            tcpSocket:
              port: 2737
          readinessProbe:
            httpGet:
              path: /stats
              port: 2737
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 1100m
              memory: 800Mi          
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
               drop:
               - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
